--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -2,31 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Dealership Review</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>About Us</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <link href="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/bootstrap-table.min.js"></script>
-    <script src="https://unpkg.com/bootstrap-table@1.18.2/dist/extensions/filter-control/bootstrap-table-filter-control.min.js"></script>
-
 </head>
-
-    <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<body>
+      <!-- Navigation Bar -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" >Dealership Review</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                    <a class="nav-link active" href="{% url 'djangoapp:about' %}">About</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
@@ -34,8 +30,13 @@
             </ul>
         </div>
     </nav>
-    <!--Add a dealer table here -->
-
-    </body>
-
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Welcome to Best Cars Dealership</h1>
+                <p>Home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
