--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -11,52 +11,87 @@
 </head>
 <body>
   <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" >Best Cars Dealership</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+    <a class="navbar-brand" href="#">Best Cars Dealership</a>
+    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
+      <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+    <div id="navb" class="navbar-collapse collapse hide">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+        </li>
+      </ul>
+<!--
+      <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#"><span class="fas fa-user"></span> Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#"><span class="fas fa-sign-in-alt"></span> Login</a>
+        </li>
+      </ul> -->
+
+
+      <ul class="nav navbar-nav ml-auto">
+        {% if user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
+                <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+              <a class="nav-link" href="{% url 'djangoapp:logout' %}">Logout</a>
             </li>
+        {% else %}
             <li class="nav-item">
-                <a class="nav-link active" href="{% url 'djangoapp:contact' %}">Contact</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-    <div class="container mt-5">
-        <div class="row">
-            <div class="col-md-6">
-                <h2>Contact Information</h2>
-                <p><strong>Address:</strong> 123 Street, New York, USA</p>
-                <p><strong>Email:</strong> contact@cardealer.com</p>
-                <p><strong>Phone:</strong> (123) 123-4567</p>
-            </div>
-            <div class="col-md-6">
-                <h2>Contact Form</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                    {% csrf_token %}
+                    <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                    <input class="form-control mr-2" type="password" name="password" placeholder="Password" required>
+                    <button class="btn btn-primary" type="submit">Login</button>
                 </form>
-            </div>
-        </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+            </li>
+        {% endif %}
+      </ul>
+
     </div>
+  </nav>
+
+  <div class="container mt-5">
+      <div class="row">
+          <div class="col-md-6">
+              <h2>Contact Information</h2>
+              <p><strong>Address:</strong> 123 Street, New York, USA</p>
+              <p><strong>Email:</strong> contact@cardealer.com</p>
+              <p><strong>Phone:</strong> (123) 123-4567</p>
+          </div>
+          <div class="col-md-6">
+              <h2>Contact Form</h2>
+              <form>
+                  <div class="form-group">
+                      <label for="name">Name</label>
+                      <input type="text" class="form-control" id="name" placeholder="Enter your name">
+                  </div>
+                  <div class="form-group">
+                      <label for="email">Email</label>
+                      <input type="email" class="form-control" id="email" placeholder="Enter your email">
+                  </div>
+                  <div class="form-group">
+                      <label for="message">Message</label>
+                      <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+          </div>
+      </div>
+  </div>
 </body>
 </html>
