--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -14,26 +14,61 @@
 </head>
 
     <body>
-    <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" >Best Cars Dealership</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+          <a class="navbar-brand" href="#">Best Cars Dealership</a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
             <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
-                </li>
+          </button>
+          <div id="navb" class="navbar-collapse collapse hide">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+              </li>
             </ul>
-        </div>
-    </nav>
+      <!--
+            <ul class="nav navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#"><span class="fas fa-user"></span> Sign Up</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#"><span class="fas fa-sign-in-alt"></span> Login</a>
+              </li>
+            </ul> -->
+
+
+            <ul class="nav navbar-nav ml-auto">
+              {% if user.is_authenticated %}
+                  <li class="nav-item">
+                      <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                          {% csrf_token %}
+                          <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                          <input class="form-control mr-2" type="password" name="password" placeholder="Password" required>
+                          <button class="btn btn-primary" type="submit">Login</button>
+                      </form>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+                  </li>
+              {% endif %}
+            </ul>
+
+          </div>
+        </nav>
+
     <!--Add a dealer table here -->
 
     </body>
