--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,11 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Best Cars - New User</title>
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
     <body>
+        <!-- Navigation Bar -->
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+          <a class="navbar-brand" href="#">Best Cars Dealership</a>
+          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div id="navb" class="navbar-collapse collapse hide">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+              </li>
+            </ul>
+
+            <ul class="nav navbar-nav ml-auto">
+              {% if user.is_authenticated %}
+                  <li class="nav-item">
+                      <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'djangoapp:logout' %}">Logout</a>
+                  </li>
+              {% else %}
+                  <li class="nav-item">
+                      <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
+                          {% csrf_token %}
+                          <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                          <input class="form-control mr-2" type="password" name="password" placeholder="Password" required>
+                          <button class="btn btn-primary" type="submit">Login</button>
+                      </form>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+                  </li>
+              {% endif %}
+            </ul>
+
+          </div>
+        </nav>
+
     <!--Add a registration form here -->
+
+    <div class="container mt-5">
+      <div class="row justify-content-center">
+          <div class="col-md-6">
+              <h2 class="mb-4">Register</h2>
+              <form action="{% url 'djangoapp:signup' %}" method="post">
+                  {% csrf_token %}
+                  <div class="form-group">
+                      <label for="first_name">First Name</label>
+                      <input type="text" class="form-control" id="first_name" name="first_name" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="last_name">Last Name</label>
+                      <input type="text" class="form-control" id="last_name" name="last_name" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="username">Username</label>
+                      <input type="text" class="form-control" id="username" name="username" required>
+                  </div>
+                  <div class="form-group">
+                      <label for="password">Password</label>
+                      <input type="password" class="form-control" id="password" name="password" required>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Register</button>
+              </form>
+          </div>
+      </div>
+  </div>
+
     </body>
 </html>
