--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -8,71 +9,101 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <style>
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        .container {
+            width: 100vw;
+            padding: 0 15px;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
+
 <body>
-  <!-- Navigation Bar -->
-  <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-    <a class="navbar-brand" href="#">Best Cars Dealership</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div id="navb" class="navbar-collapse collapse hide">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
-        </li>
-      </ul>
-<!--
-      <ul class="nav navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#"><span class="fas fa-user"></span> Sign Up</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#"><span class="fas fa-sign-in-alt"></span> Login</a>
-        </li>
-      </ul> -->
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+        <a class="navbar-brand" href="#">Best Cars Dealership</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
+            aria-expanded="true">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navb" class="navbar-collapse collapse hide">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+                </li>
+            </ul>
 
+            <ul class="nav navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:logout' %}?next={{ request.path }}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}?next={{ request.path }}" method="post">
+                        {% csrf_token %}
+                        <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                        <input class="form-control mr-2" type="password" name="password" placeholder="Password"
+                            required>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+                </li>
+                {% endif %}
+            </ul>
 
-      <ul class="nav navbar-nav ml-auto">
-        {% if user.is_authenticated %}
-            <li class="nav-item">
-                <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-            </li>
-        {% else %}
-            <li class="nav-item">
-                <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                    {% csrf_token %}
-                    <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
-                    <input class="form-control mr-2" type="password" name="password" placeholder="Password" required>
-                    <button class="btn btn-primary" type="submit">Login</button>
-                </form>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
-            </li>
-        {% endif %}
-      </ul>
+        </div>
+    </nav>
 
+    <div class="jumbotron" style="text-align: center; max-height: 250px;">
+        <h1 class="display-5">Best Cars Dealership</h1>
+        <p class="lead">Welcome to Best Cars Dealership - Your Trusted Source for Car Reviews</p>
+        <hr class="my-4">
+        <p>Explore the finest selection of domestic and imported cars in North America. Discover expert reviews and share your own experiences.</p>
     </div>
-  </nav>
 
-    <div class="container mt-5">
+    <main role="main" class="container">
         <div class="row">
-            <div class="col-md-12">
-                <h1>Welcome to Best Cars Dealership</h1>
-                <p>Home to the best cars in North America. We sell domestic and imported cars at reasonable prices.</p>
+            <div class="col-lg-6">
+                <h2>About Our Dealership</h2>
+                <p>Best Cars Dealership is committed to offering top-quality vehicles and providing exceptional customer service. Whether you're searching for a reliable family car or a high-performance sports car, we have the perfect fit for you.</p>
+                <p>Our knowledgeable team is deeply passionate about cars and is dedicated to assisting you in finding the ideal vehicle to meet your requirements.</p>
+            </div>
+            <div class="col-lg-6">
+                <h2>Our Mission</h2>
+                <p>Our mission is to be the ultimate destination for car enthusiasts. We strive to deliver top-tier vehicles, expert guidance, and extraordinary service to each and every customer.</p>
             </div>
         </div>
-    </div>
+    </main>
 
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3 footer">
+        <p>&copy; 2023 Best Cars Dealership</p>
+    </footer>
 </body>
+
 </html>
