--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -1,16 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css"
+        rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
+    <style>
+        body {
+            margin-bottom: 80px;
+            /* Margin bottom by footer height */
+        }
 
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        .container {
+            width: 100vw;
+            padding: 0 15px;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
-    <body>
-    <!--Add review form here -->
-    </body>
+
+<body>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+        <a class="navbar-brand" href="#">Best Cars Dealership</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
+            aria-expanded="true">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navb" class="navbar-collapse collapse hide">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav ml-auto">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:logout' %}?next={{ request.path }}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}?next={{ request.path }}" method="post">
+                        {% csrf_token %}
+                        <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                        <input class="form-control mr-2" type="password" name="password" placeholder="Password"
+                            required>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+                </li>
+                {% endif %}
+            </ul>
+
+        </div>
+    </nav>
+
+    <!-- Dealer details -->
+    <!-- <div class="" style="text-align: center; max-height: 100px; background-color:gainsboro;">
+        <div class="container">
+            <h2 class="display-6">{{ dealership.full_name }}</h2>
+            <p class="lead">{{ dealership.address }}, {{ dealership.city }}, {{ dealership.state }}</p>
+        </div>
+    </div> -->
+    <main role="main" class="container">
+        <!-- review form -->
+        <div class="mt-4 pt-4">
+
+        {% if error %}
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                {{ error }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endif %}
+
+              <h3>Add a review about <strong>{{ dealership.full_name }}</strong></h3>
+
+            <form action="{% url 'djangoapp:add_review' dealership.id %}" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="review"><strong>Enter the review content:</strong></label>
+                    <textarea class="form-control" id="review" name="review" required></textarea>
+                </div>
+                <div class="form-check">
+                    <input type="checkbox" class="form-check-input" id="purchase" name="purchase" checked>
+                    <label class="form-check-label" for="purchase">
+                        <span><strong>Has purchased the car from Sub-Ex Car Dealership?</strong></span>
+                        <span class="text-muted">(select purchased car information below if checked)</span>
+                    </label>
+                </div>
+                <div class="form-group">
+                    <label for="car_model"><strong>Select your car (model-make-year):</strong></label>
+                    <select class="form-control" id="car_model" name="car_model" style="max-width: 30%;">
+                        {% for car in cars %}
+                        <option selected value={{car.id}}>{{car.name}}-{{car.car_make}}-{{ car.year|date:"Y" }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="purchase_date"><strong>Select Your Purchase Date:</strong></label>
+                    <input type="text" class="form-control" id="purchase_date" name="purchase_date" style="max-width: 30%;">
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">Submit Review</button>
+            </form>
+        </div>
+    </main>
+    <!-- Footer -->
+    <footer class="footer bg-dark text-white text-center py-3">
+        <p>&copy; 2023 Best Cars Dealership</p>
+    </footer>
+
+</body>
+
+<script>
+    $(document).ready(function () {
+        $('#purchase_date').datepicker({
+            format: 'mm/dd/yyyy',
+            autoclose: true,
+            todayHighlight: true,
+        });
+
+        $('.date-own').datepicker({
+            format: 'mm/dd/yyyy'
+        });
+
+        $('#purchase').change(function () {
+            var fields = ['purchase_date', 'car_make', 'car_model', 'car_year'];
+            for (var i = 0; i < fields.length; i++) {
+                $('#' + fields[i]).prop('disabled', !this.checked);
+            }
+        });
+    });
+</script>
+
 </html>
