--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -1,86 +1,131 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Best Cars - New User</title>
+    <title>Best Cars - New User</title>
     <meta charset="UTF-8">
     {% load static %}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <style>
+        body {
+            margin-bottom: 80px;
+            /* Margin bottom by footer height */
+        }
+
+        html {
+            position: relative;
+            min-height: 100%;
+        }
+
+        .container {
+            width: 100vw;
+            padding: 0 15px;
+        }
+
+        .footer {
+            position: absolute;
+            bottom: 0;
+            width: 100%;
+            /* Set the fixed height of the footer here */
+            background-color: #f5f5f5;
+        }
+    </style>
 </head>
-    <body>
-        <!-- Navigation Bar -->
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
-          <a class="navbar-brand" href="#">Best Cars Dealership</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb" aria-expanded="true">
+
+<body>
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark sticky-top">
+        <a class="navbar-brand" href="#">Best Cars Dealership</a>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navb"
+            aria-expanded="true">
             <span class="navbar-toggler-icon"></span>
-          </button>
-          <div id="navb" class="navbar-collapse collapse hide">
+        </button>
+        <div id="navb" class="navbar-collapse collapse hide">
             <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
-              </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
+                </li>
             </ul>
 
             <ul class="nav navbar-nav ml-auto">
-              {% if user.is_authenticated %}
-                  <li class="nav-item">
-                      <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'djangoapp:logout' %}">Logout</a>
-                  </li>
-              {% else %}
-                  <li class="nav-item">
-                      <form class="form-inline" action="{% url 'djangoapp:login' %}" method="post">
-                          {% csrf_token %}
-                          <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
-                          <input class="form-control mr-2" type="password" name="password" placeholder="Password" required>
-                          <button class="btn btn-primary" type="submit">Login</button>
-                      </form>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
-                  </li>
-              {% endif %}
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <span class="nav-link">Welcome, {{ user.first_name|default:user.username }}</span>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:logout' %}?next={{ request.path }}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <form class="form-inline" action="{% url 'djangoapp:login' %}?next={{ request.path }}" method="post">
+                        {% csrf_token %}
+                        <input class="form-control mr-2" type="text" name="username" placeholder="Username" required>
+                        <input class="form-control mr-2" type="password" name="password" placeholder="Password"
+                            required>
+                        <button class="btn btn-primary" type="submit">Login</button>
+                    </form>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'djangoapp:signup' %}">Signup</a>
+                </li>
+                {% endif %}
             </ul>
 
-          </div>
-        </nav>
+        </div>
+    </nav>
 
-    <!--Add a registration form here -->
+    <!--registration form -->
+    <main role="main" class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6">
+                <h2 class="mb-4">Register</h2>
+                <form action="{% url 'djangoapp:signup' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="first_name">First Name <span class="text-danger">*</span></label>
+                            <input type="text" class="form-control" id="first_name" name="first_name" required>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="last_name">Last Name <span class="text-danger">*</span></label>
+                            <input type="text" class="form-control" id="last_name" name="last_name" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email <span class="text-danger">*</span></label>
+                        <input type="email" class="form-control" id="email" name="email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Username <span class="text-danger">*</span></label>
+                        <input type="text" class="form-control" id="username" name="username" required>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="password">Password <span class="text-danger">*</span></label>
+                            <input type="password" class="form-control" id="password" name="password" required>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="confirm_password">Confirm Password <span class="text-danger">*</span></label>
+                            <input type="password" class="form-control" id="confirm_password" name="confirm_password"
+                                required>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Register</button>
+                </form>
+            </div>
+        </div>
+    </main>
+</body>
 
-    <div class="container mt-5">
-      <div class="row justify-content-center">
-          <div class="col-md-6">
-              <h2 class="mb-4">Register</h2>
-              <form action="{% url 'djangoapp:signup' %}" method="post">
-                  {% csrf_token %}
-                  <div class="form-group">
-                      <label for="first_name">First Name</label>
-                      <input type="text" class="form-control" id="first_name" name="first_name" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="last_name">Last Name</label>
-                      <input type="text" class="form-control" id="last_name" name="last_name" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="username">Username</label>
-                      <input type="text" class="form-control" id="username" name="username" required>
-                  </div>
-                  <div class="form-group">
-                      <label for="password">Password</label>
-                      <input type="password" class="form-control" id="password" name="password" required>
-                  </div>
-                  <button type="submit" class="btn btn-primary">Register</button>
-              </form>
-          </div>
-      </div>
-  </div>
+<!-- Footer -->
+<footer class="bg-dark text-white text-center py-3 footer">
+    <p>&copy; 2023 Best Cars Dealership</p>
+</footer>
 
-    </body>
 </html>
