--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -53,7 +53,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="{% url 'djangoapp:contact' %}">Contact</a>
                 </li>
             </ul>
