--- a/server/djangoapp/templates/djangoapp/contact.html
+++ b/server/djangoapp/templates/djangoapp/contact.html
@@ -81,34 +81,22 @@
         </div>
     </nav>
 
-    <main role="main" class="container">
-            <div class="row mt-4 pt-4">
-                <div class="col-md-6">
-                    <h2>Contact Information</h2>
-                    <p><strong>Address:</strong> 123 Street, New York, USA</p>
-                    <p><strong>Email:</strong> contact@cardealer.com</p>
-                    <p><strong>Phone:</strong> (123) 123-4567</p>
-                </div>
-                <div class="col-md-6">
-                    <h2>Contact Form</h2>
-                    <form>
-                        <div class="form-group">
-                            <label for="name">Name</label>
-                            <input type="text" class="form-control" id="name" placeholder="Enter your name">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                        </div>
-                        <div class="form-group">
-                            <label for="message">Message</label>
-                            <textarea class="form-control" id="message" rows="5"
-                                placeholder="Enter your message"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
-                    </form>
-                </div>
+    <main role="main" class="container mt-4 pt-4">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>Contact Information</h1>
+                <hr>
+                <h3>Write to us at:</h3>
+                <p class="pl-4"><strong>Address:</strong> 123 Street, New York, USA</p>
+
+                <h3>Email us at:</h3>
+                <p class="pl-4"><strong>Email:</strong> contact@cardealer.com</p>
+
+                <h3>Call us at:</h3>
+                <p class="pl-4"><strong>Phone:</strong> (123) 123-4567 <span class="text-muted"> (Mon-Fri 9:00AM to 5:00PM)</span></p>
+                <hr>
             </div>
+        </div>
     </main>
 
     <!-- Footer -->
