--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -43,7 +43,7 @@
         <div id="navb" class="navbar-collapse collapse hide">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" href="{% url 'djangoapp:index' %}">Home</a>
+                    <a class="nav-link" href="{% url 'djangoapp:index' %}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'djangoapp:about' %}">About</a>
