--- a/server/djangoapp/templates/djangoapp/about.html
+++ b/server/djangoapp/templates/djangoapp/about.html
@@ -90,7 +90,6 @@
             <div class="col-lg-6">
                 <h2>About Our Dealership</h2>
                 <p>Best Cars Dealership is committed to offering top-quality vehicles and providing exceptional customer service. Whether you're searching for a reliable family car or a high-performance sports car, we have the perfect fit for you.</p>
-                <p>Our knowledgeable team is deeply passionate about cars and is dedicated to assisting you in finding the ideal vehicle to meet your requirements.</p>
             </div>
             <div class="col-lg-6">
                 <h2>Our Mission</h2>
@@ -102,7 +101,8 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3 footer">
-        <p>&copy; 2023 Best Cars Dealership</p>
+        <span>&copy; 2023 Best Cars Dealership </span><br>
+        <cite class="cite text-muted">(By Gurmeet for IBM Full Stack Application Development Project)</cite>
     </footer>
 </body>
 
