--- a/server/djangoapp/templates/djangoapp/add_review.html
+++ b/server/djangoapp/templates/djangoapp/add_review.html
@@ -138,7 +138,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer bg-dark text-white text-center py-3">
-        <p>&copy; 2023 Best Cars Dealership</p>
+        <span>&copy; 2023 Best Cars Dealership </span><br>
+        <cite class="cite text-muted">(By Gurmeet for IBM Full Stack Application Development Project)</cite>
     </footer>
 
 </body>
