--- a/server/djangoapp/templates/djangoapp/index.html
+++ b/server/djangoapp/templates/djangoapp/index.html
@@ -114,7 +114,8 @@
   <!-- Footer -->
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      <span>&copy; 2023 Best Cars Dealership</span>
+      <span>&copy; 2023 Best Cars Dealership </span><br>
+      <cite class="cite text-muted">(By Gurmeet for IBM Full Stack Application Development Project)</cite>
     </div>
   </footer>
   <!-- </div> -->
