--- a/server/djangoapp/templates/djangoapp/registration.html
+++ b/server/djangoapp/templates/djangoapp/registration.html
@@ -125,7 +125,8 @@
 
 <!-- Footer -->
 <footer class="bg-dark text-white text-center py-3 footer">
-    <p>&copy; 2023 Best Cars Dealership</p>
+    <span>&copy; 2023 Best Cars Dealership </span><br>
+    <cite class="cite text-muted">(By Gurmeet for IBM Full Stack Application Development Project)</cite>
 </footer>
 
 </html>
